# flutter_rust

./: justfile  pubspec.yaml
android/: gradle.properties
lib/: bridge_generated.dart  ffi.dart  main.dart
macos/Runner/: DebugProfile.entitlements  bridge_generated.h
native/: Cargo.toml
native/src/: api.rs  bridge_generated.rs
