[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1"
flutter_rust_bridge = "1"
cqrs = "*"
cqrs-core = "*"
onvif = { git = "https://github.com/ngoluuduythai/onvif-rs" }
xsd-types = { git = "https://github.com/lumeohq/xsd-parser-rs", rev = "7f3d433" }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.8"